--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <p>Сейчас бойцовские собаки – это великолепные компаньоны и уравновешенные животные. Несмотря на стереотипы, питомцы не переняли агрессивные повадки своих предков и выводились исключительно миролюбивыми и ласковыми. 
                 Об их принадлежности к категории бойцовых говорят лишь исторические факты.</p>
         </section>
-        <h1 id="types"></h1>
+        <h2 id="types">Топ самых распространенных пород бойцовских собак</h2>
         <div class="types_of_dogs">
             <section class="dog 1"> 
-                <h2>Бультерьер</h2>
+                <h3>Бультерьер</h3>
                 <img src="images/dog1.png" alt="фото бультерьера">
                 <p>Страна происхождения: Великобритания</p>
                 <p>Время зарождения породы: XIX век</p>
@@ -44,7 +44,7 @@
                     Эти английские аристократы подходят только для опытных собаководов, которые займут позицию лидера и не уступят её четверолапому другу.</p>
             </section>
             <section class="dog 2">
-                <h2>Питбуль</h2>
+                <h3>Питбуль</h3>
                 <img src="images/dog2.jpeg" alt="фото питбуля">
                 <p>Страна происхождения: США</p>
                 <p>Вес: кобели 16-27 кг, суки 14-23 кг</p>
@@ -57,7 +57,7 @@
                 <p>Боевой дух этого «американца» нужно постоянно обуздывать, поэтому его владелец должен быть человеком с твердым характером, чтобы суметь обучить собаку и в дальнейшем поддерживать в ней дисциплину. </p>
             </section>
             <section class="dog 3">
-                <h2>Бурбуль</h2>
+                <h3>Бурбуль</h3>
                 <img src="images/dog3.jpeg" alt="фото бурбуля">
                 <p>Страна происхождения: Южная Африка</p>
                 <p>Вес: кобели 65-80 кг, суки 50-65 кг</p>
@@ -71,7 +71,7 @@
                 <p>Желание доминировать и играть роль альфа-самца у бурбуля выражено достаточно ярко, поэтому собаке необходим опытный владелец, который не позволит собой манипулировать.</p>
             </section>
             <section class="dog 4">
-                <h2>Кане-корсо</h2>
+                <h3>Кане-корсо</h3>
                 <img src="images/dog4.jpeg" alt="фото кане-корсо">
                 <p>Страна происхождения: Италия</p>
                 <p>Вес: кобели 45-50 кг, суки 40-45 кг</p>
@@ -84,7 +84,7 @@
                 <p>Некоторая властность пса может оказаться трудным испытанием для неопытных владельцев, поэтому, если вы впервые решили завести себе четвероногого друга, начинайте с представителя иной породы.</p>       
             </section>
             <section class="dog 5">
-                <h2>Американский булли</h2>
+                <h3>Американский булли</h3>
                 <img src="images/dog5.jpeg" alt="фото американского булли">
                 <p>Страна происхождения: США</p>
                 <p>Вес: 30-58 кг</p>
@@ -96,7 +96,7 @@
                 <p>Начинающим собаководам не под силу справиться с этими строптивыми великанами.</p>    
             </section>
             <section class="dog 6">
-                <h2>Американский стаффордширский терьер</h2>
+                <h3>Американский стаффордширский терьер</h3>
                 <img src="images/dog6.jpeg" alt="фото американского стаффордширского терьера">
                 <p>Страна происхождения: США</p>
                 <p>Время зарождения породы: 1936 год</p>
@@ -109,25 +109,24 @@
                 <p>Содержать этих собак несложно. Особых проблем со здоровьем, при условии постоянного контроля за самочувствием вашего питомца, тоже не возникнет.</p>
             </section>
         </div>
-        <h1 id="rules"></h1>    
+        <h2 id="rules">Выбор бойцовской собаки</h2>    
             <section class="choose">
-                <h2>Выбор бойцовской собаки</h2>
                 <p>Выбор бойцовской собаки — это важное решение, которое требует внимательного подхода. Вот несколько шагов, которые помогут вам определиться с породой:</p>
                 <ul>
                     <li>Определите свои цели</li>
-                    <p>Для каких целей вам нужна собака? Это может быть как спорт (например, аджилити, соревнования по борьбе), так и охрана или просто компаньон.</p>
+                <p>Для каких целей вам нужна собака? Это может быть как спорт (например, аджилити, соревнования по борьбе), так и охрана или просто компаньон.</p>
                     <li>Изучите породы</li>
-                    <p>Ознакомьтесь с различными породами бойцовских собак. Разные породы могут иметь разные темпераменты, размеры и уровни активности.</p>
+                <p>Ознакомьтесь с различными породами бойцовских собак. Разные породы могут иметь разные темпераменты, размеры и уровни активности.</p>
                     <li>Учтите условия проживания</li>
-                    <p>Размер вашего жилья и доступное пространство играют важную роль. Большие собаки иногда требуют больше места для активных игр и физической активности.</p>
+                <p>Размер вашего жилья и доступное пространство играют важную роль. Большие собаки иногда требуют больше места для активных игр и физической активности.</p>
                     <li>Обратите внимание на темперамент и уровень активности</li>
-                    <p>Некоторые породы могут быть более дружелюбными и общительными, тогда как другие могут требовать более строгого дрессировки и социализации. Подумайте о своем образе жизни и о том, какие качества собаки вам важны. Оцените свою физическую активность. Некоторые бойцовские породы требуют регулярных тренировок и активных прогулок, в то время как другие могут быть менее требовательными.</p>
+                <p>Некоторые породы могут быть более дружелюбными и общительными, тогда как другие могут требовать более строгого дрессировки и социализации. Подумайте о своем образе жизни и о том, какие качества собаки вам важны. Оцените свою физическую активность. Некоторые бойцовские породы требуют регулярных тренировок и активных прогулок, в то время как другие могут быть менее требовательными.</p>
                     <li>Учтите возможные проблемы со здоровьем</li>
-                    <p>Некоторые бойцовские породы могут иметь предрасположенность к определенным заболеваниям. Подробно изучите информацию о генетических заболеваниях, характерных для выбранной вами породы.</p>
+                <p>Некоторые бойцовские породы могут иметь предрасположенность к определенным заболеваниям. Подробно изучите информацию о генетических заболеваниях, характерных для выбранной вами породы.</p>
                     <li>Готовьтесь к ответственности</li>
-                    <p>Помните, что собака — это не только компаньон, но и ответственность. Будьте готовы уделить время на дрессировку, уход и социальную адаптацию.</p>
+                <p>Помните, что собака — это не только компаньон, но и ответственность. Будьте готовы уделить время на дрессировку, уход и социальную адаптацию.</p>
                     <li>Проконсультируйтесь с экспертами</li>
-                    <p>Поговорите с профессиональными собаководами, тренерами или ветеринарами, чтобы получить рекомендации по породам и их особенностям.</p>
+                <p>Поговорите с профессиональными собаководами, тренерами или ветеринарами, чтобы получить рекомендации по породам и их особенностям.</p>
                     <a href="tel:89501205487" class="btn btn-secondary">Связь с экспертами / консультации</a>
                 </ul>    
             </section>
